优化模块管理器